<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App ID's -->
    <string name="facebook_app_id">1431699690421953</string>
    <string name="facebook_app_secret">d641a132184cf814a0b308259f62d5a0</string>
    <string name="parse_app_id">WB3Th85cP3viS7jJ5zkXzkZ2MTsFagIg0AKQeBpQ</string>
    <string name="parse_app_secret">EGZKA60G8Iy4vVCPPvBDjn2XoeBbqQ1rtWReRvRh</string>

    <!-- Action Bar Titles -->
    <string name="ab_title_app_name">RIstaurants</string>
    <string name="ab_title_restaurants">RESTAURANTS</string>
    <string name="ab_title_menu">MENUS</string>
    <string name="ab_title_reviews">REVIEWS</string>
    <string name="ab_title_add_dish_review">ADD REVIEWS</string>
    <string name="ab_title_maps">GOOGLE MAPS</string>
    <string name="ab_title_favorites">favorites</string>
    <string name="ab_title_top_dishes">top dishes</string>
    <string name="ab_title_cuisine">cuisines</string>
    <string name="ab_title_settings">settings</string>
    <string name="ab_title_profile">profile</string>

    <!-- Content Desc -->
    <string name="content_drawer_left_icon">Navigation Icon</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Misc -->
    <string name="phone_text">phone: </string>

    <!-- Menu -->
    <string name="menu_restaurant_menu">MENU</string>
    <string name="menu_restaurant_random">Random Restaurants</string>
    <string name="menu_dish_review_add">Add Review</string>
    <string name="menu_directions">Directions</string>
    <string name="menu_call">Call</string>
    <string name="menu_location">Display Location</string>
	<string name="menu_menu">Restaurant Menu</string>
    <string name="user_profile">Log In</string>

    <!-- Messages -->
    <string name="review_was_added">Your review was successfully added.</string>
	<string name="please_fill_all_fields">Please compete all field.</string>
    <string name="no_description_available">"Sorry, no description available at time."</string>
    <string name="please_verify_email">Please, check your email to verify your account.</string>
	<string name="logout_user">Logout?</string>
    <string name="please_login">Please login to use this feature.</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="app_description">Description</string>
    <string name="description">RiStaurants is a mobile application for android mobile devices that allows users to view, rate and review restaurants in Rhode Island, USA. In addition, it assists a user in finding a restaurant based on several categories.</string>
    <string name="developers">Developers</string>
    <string name="christian_soler">Christian Soler</string>
    <string name="ashley_kelly">Ashley Kelly</string>
    <string name="juan_carlos_beteta">Juan Carlos Beteta</string>
    <string name="danielle_bessler">Danielle Bessler</string>
    <string name="extras_info">Extra Information</string>
    <string name="font_info">Font Provided By: <a href='http://jimdore.com'>Jim Dore</a></string>
    <string name="volley_link">ImageLoader Provided By: <a href='https://android.googlesource.com/platform/frameworks/volley/'>Android Volley</a></string>
    <string name="parse_link">Server Provided By: <a href='https://www.parse.com'>Parse</a></string>
    <string name="app_info">Version Information</string>
    <string name="app_version_info">App Version: 1.0</string>
    <string name="app_version_released_date">Release Date: May 1, 2014</string>

    <!-- TextView Text -->
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="not_login">Not Login</string>
	<string name="logout">Logout</string>
    <string name="password_hint">password</string>
    <string name="login_dialog">Login</string>
    <string name="user_full_name">Name: </string>
    <string name="user_location">Location: </string>
    <string name="user_occupation">Occupation: </string>
    <string name="user_member_since">Member Since: </string>
    <string name="email_hint">email</string>
    <string name="menu_profile_edit">Edit Profile</string>
    <string name="first_hint">first Name</string>
    <string name="last_hint">last Name</string>
    <string name="location_hint">location</string>
    <string name="bio_occupation">occupation</string>
    <string name="total_post">Total Post: </string>
    <string name="spinner_select_flavors">Select flavor: </string>
    <string name="spinner_select_rate">Select Rate: </string>
    <string name="hint_review">review</string>
    <string name="add">Add</string>
    <string name="added_to_favorites">Successfully added to favorites.</string>
    <string name="remove_to_favorites">Successfully removed from favorites.</string>
    <string name="forgot_password"><a href='https://www.parse.com'>forgot password</a></string>
    <string name="menu_upload_image">Upload Image</string>
    <string name="user_email">Email:</string>


</resources>
