<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:orientation="horizontal">

            <com.ristaurants.ristaurants.views.BenderThinTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/custom_dialog_height"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/row_margin"
                android:layout_marginTop="@dimen/row_margin"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="@dimen/restaurants_name_size" />

            <ImageView
                android:id="@+id/iv_sign_up_image_preview"
                android:layout_width="@dimen/custom_dialog_height"
                android:layout_height="@dimen/custom_dialog_height"
                android:layout_margin="@dimen/row_margin"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/profile_pic"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/et_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_sign_up_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/first_hint"
            android:inputType="textAutoComplete" />

        <EditText
            android:id="@+id/et_sign_up_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/last_hint"
            android:inputType="textAutoComplete" />

        <EditText
            android:id="@+id/et_sign_up_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/location_hint"
            android:inputType="textAutoComplete" />

        <EditText
            android:id="@+id/et_sign_up_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/bio_occupation"
            android:inputType="textAutoComplete" />

    </LinearLayout>
</ScrollView>