<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipToPadding="true"
    android:orientation="vertical"
    android:padding="@dimen/row_margin">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/row_margin"
            android:orientation="horizontal">

            <com.facebook.widget.ProfilePictureView
                android:id="@+id/ppv_profile_image"
                android:layout_width="@dimen/profile_size"
                android:layout_height="@dimen/profile_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/row_margin">

                <com.ristaurants.ristaurants.views.BenderSolidTextView
                    android:id="@+id/tv_profile_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/not_login"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/restaurants_name_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/drawer_divider"
                    android:layout_marginBottom="@dimen/row_margin"
                    android:layout_marginTop="@dimen/row_margin"
                    android:background="@android:color/darker_gray" />

                <com.ristaurants.ristaurants.views.BenderThinTextView
                    android:id="@+id/tv_profile_post_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/total_post"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/restaurants_subname_size" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/drawer_divider"
            android:layout_marginBottom="@dimen/row_margin"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/row_margin">

            <com.ristaurants.ristaurants.views.BenderSolidTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/user_email"
                android:textColor="@android:color/black"
                android:textSize="@dimen/restaurants_name_size" />

            <com.ristaurants.ristaurants.views.BenderThinTextView
                android:id="@+id/tv_profile_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/restaurants_name_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/drawer_divider"
            android:layout_marginBottom="@dimen/row_margin"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/row_margin">

            <com.ristaurants.ristaurants.views.BenderSolidTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/user_member_since"
                android:textColor="@android:color/black"
                android:textSize="@dimen/restaurants_name_size" />

            <com.ristaurants.ristaurants.views.BenderThinTextView
                android:id="@+id/tv_profile_member_since"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/restaurants_name_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/drawer_divider"
            android:layout_marginBottom="@dimen/row_margin"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/row_margin"
            android:visibility="gone">

            <com.ristaurants.ristaurants.views.BenderSolidTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/user_occupation"
                android:textColor="@android:color/black"
                android:textSize="@dimen/restaurants_name_size" />

            <com.ristaurants.ristaurants.views.BenderThinTextView
                android:id="@+id/tv_profile_bio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/restaurants_name_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/drawer_divider"
            android:layout_marginBottom="@dimen/row_margin"
            android:background="@android:color/darker_gray"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/iv_fb_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:background="@drawable/fb_login_button"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>
